--- a/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
+++ b/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
@@ -17,3 +17,7 @@
   file:
     path: /srv/rss.lasyk.info-latest.tar.gz
     state: absent
+
+- name: Rename old config.php
+  command: mv /srv/rss.lasyk.info/config.php /srv/rss.lasyk.info/config.php.tpl
+    creates: /srv/rss.lasyk.info/config.php.tpl
