--- a/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
+++ b/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
@@ -28,6 +28,7 @@
 
   - name: Create config.php
     command: mv /srv/rss.lasyk.info/config.php.tpl mv /srv/rss.lasyk.info/config.php
+    args:
       creates: /srv/rss.lasyk.info/config.php
 
   when: ttrss_db_config.stat.exists == false
