--- a/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
+++ b/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
@@ -20,4 +20,5 @@
 
 - name: Rename old config.php
   command: mv /srv/rss.lasyk.info/config.php /srv/rss.lasyk.info/config.php.tpl
+  args:
     creates: /srv/rss.lasyk.info/config.php.tpl
