--- a/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
+++ b/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
@@ -23,7 +23,7 @@
 
   - lineinfile:
       path: /srv/rss.lasyk.info/config.php.tpl
-      regexp: "define\(\'DB_PASS\'\)"
+      regexp: "define..DB_PASS.."
       line: " define('DB_PASS', '{{ mariadb_ttrss_pass }}');"
 
   - name: Create config.php
