--- a/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
+++ b/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
@@ -1,7 +1,7 @@
 - name: Check whether there's any old configuration
   stat:
     path: /srv/rss.lasyk.info/config.php
-  register: ttrss_db_config_exists
+  register: ttrss_db_config
 
 - block:
   - name: Generate password
