--- a/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
+++ b/ansible/roles/configure_ttrss/tasks/load_web_backup.yml
@@ -29,4 +29,4 @@
     args:
       creates: /srv/rss.lasyk.info/config.php.tpl
 
-  when: www_directory.stat.exists == false//
+  when: www_directory.stat.exists == false
