--- a/ansible/roles/configure_ttrss/tasks/main.yml
+++ b/ansible/roles/configure_ttrss/tasks/main.yml
@@ -1,6 +1,6 @@
 - include: load_web_backup.yml
 - include: configure_ttrss_db.yml
-# todo: create ttrss mariadb user and change its pwd in config.php
+- include: load_db_backup.yml
 # todo: load DB data from backup
 # todo: generate SSL cert from letsencrypt and export to safe storage
 # todo: reconfigure nginx (SSL)
