--- a/ansible/roles/configure_ttrss/tasks/load_db_backup.yml
+++ b/ansible/roles/configure_ttrss/tasks/load_db_backup.yml
@@ -12,10 +12,11 @@
     args:
       creates: /srv/tinyrss-latest.sql.gz
 
-  - mysql_db:
-    name: "tinyrss"
-    state: import
-    target: /srv/tinyrss-latest.sql.gz
+  - name: Import DB from backup
+    mysql_db:
+      name: "tinyrss"
+      state: import
+      target: /srv/tinyrss-latest.sql.gz
 
   - name: Cleanup
     file:
