--- a/ansible/roles/php-fpm/tasks/main.yml
+++ b/ansible/roles/php-fpm/tasks/main.yml
@@ -16,7 +16,7 @@
 - name: Prepare PHP config
   lineinfile:
     path: /etc/php.ini
-    regexp: ';cgi.fix_pathinfo\=1'
+    regexp: '^;?cgi.fix_pathinfo\='
     line: 'cgi.fix_pathinfo=0'
 
 - name: Prepare PHP-FPM config
