--- a/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
+++ b/ansible/roles/configure_ttrss/tasks/configure_ttrss_db.yml
@@ -1,6 +1,6 @@
 - name: Check whether there's any old configuration
   stat:
-    path: /srv/rss.lasyk.info/config.php
+    path: "/srv/{{ rss_hostname }}/config.php"
   register: ttrss_db_config
 
 - block:
@@ -25,13 +25,13 @@
     - localhost
 
   - lineinfile:
-      path: /srv/rss.lasyk.info/config.php.tpl
+      path: "/srv/{{ rss_hostname }}/config.php.tpl"
       regexp: "define..DB_PASS.."
       line: " define('DB_PASS', '{{ mariadb_ttrss_pass }}');"
 
   - name: Create config.php
-    command: mv /srv/rss.lasyk.info/config.php.tpl /srv/rss.lasyk.info/config.php
+    command: mv /srv/{{ rss_hostname }}/config.php.tpl /srv/{{ rss_hostname }}/config.php
     args:
-      creates: /srv/rss.lasyk.info/config.php
+      creates: /srv/{{ rss_hostname }}/config.php
 
   when: ttrss_db_config.stat.exists == false
