--- a/ansible/roles/configure_ttrss/tasks/main.yml
+++ b/ansible/roles/configure_ttrss/tasks/main.yml
@@ -2,7 +2,7 @@
 - include: configure_ttrss_db.yml
 - include: load_db_backup.yml
 - include: configure_ttrss_nginx.yml
-- include: configure_ttrss_updater.yml
+- include: configure_ttrss_feed_updater.yml
 # todo: generate SSL cert from letsencrypt and export to safe storage
 # todo: reconfigure nginx (SSL)
 # todo: configure systemd timer (create daily backup and upload to cloud storage)
