--- a/ansible/roles/configure_ttrss/tasks/configure_ttrss_nginx.yml
+++ b/ansible/roles/configure_ttrss/tasks/configure_ttrss_nginx.yml
@@ -1,7 +1,7 @@
 - name: Load vhost config into Nginx
   template:
     src: rss.lasyk.info.conf.j2
-    dest: "/etc/nginx/conf.d/{{ rss_hostname }}"
+    dest: "/etc/nginx/conf.d/{{ rss_hostname }}.conf"
     owner: nginx
     group: nginx
     mode: 0660
