--- a/ansible/roles/configure_ttrss/tasks/main.yml
+++ b/ansible/roles/configure_ttrss/tasks/main.yml
@@ -3,6 +3,7 @@
 - include: load_db_backup.yml
 - include: configure_ttrss_nginx.yml
 - include: configure_ttrss_feed_updater.yml
+- include: configure_ttrss_backups.yml
 # todo: generate SSL cert from letsencrypt and export to safe storage
 # todo: reconfigure nginx (SSL)
 # todo: configure systemd timer (create daily backup and upload to cloud storage)
